--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 .fl{
     float: right;
 }
-body{
+html,body{
     width: 100%;
     height: 100%;
     background: #fff;
@@ -16,8 +16,8 @@ body{
 .header{
     width: 100%;
     height: 140px;
-    background: url("../images/header.png") center;
-    background-size: contain;
+    background: url("../images/header.png");
+    background-size: cover;
     text-align: center;
     color: #fff;
 }
@@ -58,10 +58,6 @@ body{
     width: 100%;
     height: 220px;
     padding-left: 15px;
-
-
-
-
 }
 .content .content_bd_ct{
     border-left: 1px solid #ccc;
