--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,6 @@ html,body{
     width: 100%;
     height: 100%;
     background: #fff;
-    overflow: hidden;
 }
 .header{
     width: 100%;
@@ -25,16 +24,17 @@ html,body{
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 /*address*/
 .address{
     height: 60px;
-    padding-left: 10px;
     line-height: 60px;
 }
+.address p{
+    padding-left: 15px;
+}
 .address_bg{
-    width: 100%;
     height: 6px;
     background: #e8e8e8;
 }
@@ -44,18 +44,15 @@ html,body{
 
 /*content*/
 .content{
-    width: 100%;
     background: #fff;
 }
 .content .text{
-    width: 100%;
     height: 60px;
     line-height: 60px;
     padding-left: 15px;
     border-bottom: 1px solid #ccc;
 }
 .content .content_bd{
-    width: 100%;
     height: 220px;
     padding-left: 15px;
 }
