--- a/css/index.css
+++ b/css/index.css
@@ -45,6 +45,7 @@ html,body{
 /*content*/
 .content{
     background: #fff;
+    height: 480px;
 }
 .content .text{
     height: 60px;
@@ -58,7 +59,7 @@ html,body{
 }
 .content .content_bd_ct{
     border-left: 1px solid #ccc;
-    padding: 15px 30px 0 15px;
+    padding: 15px 15px 0 15px;
     color: #A3A3A3;
 
 }
@@ -96,3 +97,19 @@ html,body{
     color: #ccc;
     font-size: 20px;
 }
+
+.code{
+    position: absolute;
+    right: 10px;
+    top: 170px;
+}
+
+.dowebok { margin: 0 auto;}
+.dowebok ul { list-style-type: none;}
+.dowebok .row { font-size: 0; text-align: center;}
+.dowebok .wow { display: inline-block; width: 280px; height: 280px; margin: 30px 15px 0; border-radius: 50%; font: 30px/280px "Microsoft Yahei"; vertical-align: top; *display: inline; zoom: 1;}
+.bg-green { background: #5bd5a0;}
+.bg-blue { background: #1daee9;}
+.bg-purple { background: #c843a5;}
+.bg-red { background: #eb3980;}
+.bg-yellow { background: #ffcc35;}
