--- a/css/index.css
+++ b/css/index.css
@@ -102,13 +102,19 @@ html,body{
     right: 10px;
     top: 170px;
 }
+.a{text-align:center;line-height: 40px;position: fixed;top: 0;left: 0;width: 100%;z-index: 10;border-bottom: 1px #ccc solid; background: #f50;color: #fff;}
+.tab{display: flex;line-height: 40px;position: fixed;top: 40px;width: 100%;z-index: 10;border-bottom: 1px #ccc solid;}
+.tab a{width: 33.333333%;background: #fff;text-align: center;}
+.tab .active{border-bottom: 1px #f50 solid; color: #f50;}
+.panel{margin: 0;}
 
-.dowebok { margin: 0 auto;}
-.dowebok ul { list-style-type: none;}
-.dowebok .row { font-size: 0; text-align: center;}
-.dowebok .wow { display: inline-block; width: 280px; height: 280px; margin: 30px 15px 0; border-radius: 50%; font: 30px/280px "Microsoft Yahei"; vertical-align: top; *display: inline; zoom: 1;}
-.bg-green { background: #5bd5a0;}
-.bg-blue { background: #1daee9;}
-.bg-purple { background: #c843a5;}
-.bg-red { background: #eb3980;}
-.bg-yellow { background: #ffcc35;}
+.refreshtip {position: absolute;left: 0;width: 100%;margin: 10px 0;text-align: center;color: #999;}
+.swiper-container{overflow: visible;}
+.loadtip { display: block;width: 100%;line-height: 40px; height: 40px;text-align: center;color: #999;border-top: 1px solid #ddd;}
+.swiper-container, .w{height: calc(100vh - 120px);}
+.swiper-slide{height: auto;}
+
+.text-center{text-align: center;}
+.list-group{padding-left: 0;margin-bottom: 20px;}
+.list-group-item{    position: relative; display: block;padding: 10px 15px;margin-bottom: -1px;background-color: #fff;border: 1px solid #ddd;}
+.list-group-item:first-child {border-top-left-radius: 4px;border-top-right-radius: 4px;}
